Fixed cards container padding and gap; Ex solved!

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -46,7 +46,8 @@ a {
 .cards-container{
   display: flex;
   flex-wrap: wrap;
-  padding: 16px;
+  padding: 48px;
+  gap: 32px;
 }
 
 .card {
